--- a/Урок 41-48. ООП/Python - PT46.html
+++ b/Урок 41-48. ООП/Python - PT46.html
@@ -469,7 +469,7 @@
         </ul>
         </p>
 
-        <p class="=inner-p">Затем протестируйте класс.</p>
+        <p class="inner-p">Затем протестируйте класс.</p>
       </div>
     </div>
   </div>
