Updated PT46 and HW46.

--- a/Урок 41-48. ООП/Python - PT46.html
+++ b/Урок 41-48. ООП/Python - PT46.html
@@ -289,7 +289,7 @@
           <li>Вычисление площади
             <ul>
               <li>Ничего не принимает.</li>
-              <li>Возвращает <span class="hl-text">площадь прямоугольника</span></li>
+              <li>Возвращает <span class="hl-text">площадь прямоугольника</span>.</li>
             </ul>
           </li>
         </ul>
